Updated resume and projects

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,16 +1,16 @@
 <div class="container-fluid" style="min-height:100%">
 <div class="row contact-component">
-    <div class="col-md-6 col-sm-12 col-lg-6">
+    <div class="col-md-6 col-sm-12 col-xs-12 col-lg-6">
        <a class="card" href="mailto:parasmalhotra522@gmail.com">
         <div class="text-center text">
             <i class="fa fa-at"></i>
             <p class="mail">Write to me</p>
             <p  class="fw-normal fs-3 mail">
-                parasmalhotra522@gmail.com</p>
+                {{'parasmalhotra522@gmail.com'}}</p>
         </div>
        </a>
     </div>
-    <div class="col-md-6 col-sm-12 col-lg-6">
+    <div class="col-md-6 col-xs-12 col-sm-12 col-lg-6">
        <div class="profile-section">
             <h2 class="lets-connect">Let's Connect !</h2>
             <div class="social">
