--- a/src/app/experience/experience.component.scss
+++ b/src/app/experience/experience.component.scss
@@ -1,83 +1,271 @@
 $fontColor: coral;
 $fontFamily: 'Montserrat', sans-serif;
 
-.experience {
-    padding-top: 4rem;
+// .experience {
+//     padding-top: 4rem;
 
-    .header-bar {
-        text-align: center;
-        font-size: 42px;
-        letter-spacing: .2rem;
-        text-transform: uppercase;
-        font-family: $fontFamily;
-        color: #fff;
-        cursor: pointer;
-        text-decoration: none;
-        background-image: linear-gradient(351deg, rgba(218, 218, 224, 1) 0%, rgba(249, 249, 255, 1) 35%, rgba(198, 204, 205, 1) 100%);
-        // background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
-        background-position: bottom;
-        background-repeat: no-repeat;
-        background-size: 5% 4px;
-        border-radius: 53px;
-        transition: background-size 1s ease-in-out;
-        padding-bottom: .7rem;
+    // .header-bar {
+    //     text-align: center;
+    //     font-size: 42px;
+    //     letter-spacing: .2rem;
+    //     text-transform: uppercase;
+    //     font-family: $fontFamily;
+    //     color: #fff;
+    //     cursor: pointer;
+    //     text-decoration: none;
+    //     background-image: linear-gradient(351deg, rgba(218, 218, 224, 1) 0%, rgba(249, 249, 255, 1) 35%, rgba(198, 204, 205, 1) 100%);
+    //     // background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
+    //     background-position: bottom;
+    //     background-repeat: no-repeat;
+    //     background-size: 5% 4px;
+    //     border-radius: 53px;
+    //     transition: background-size 1s ease-in-out;
+    //     padding-bottom: .7rem;
 
-    }
+    // }
 
-    .header-bar:hover {
-        background-size: 20% 4px;
-        transition: background-size 1s ease-in-out;
+    // .header-bar:hover {
+    //     background-size: 20% 4px;
+    //     transition: background-size 1s ease-in-out;
 
-    }
+    // }
 
-    .accordion {
+//     .accordion {
 
-        .accordion-item {
-            display: flex;
-            flex-direction: column;
+//         .accordion-item {
+//             display: flex;
+//             flex-direction: column;
 
-            .accordion-header {
-                margin: 0;
+//             .accordion-header {
+//                 margin: 0;
 
-                .accordion-heading {
-                    display: block;
-                    border-bottom: 1rem solid #343a40;
+//                 .accordion-heading {
+//                     display: block;
+//                     border-bottom: 1rem solid #343a40;
 
-                    .timeline {
-                        float: right;
-                        position: relative;
-                    }
-                }
-            }
+//                     .timeline {
+//                         float: right;
+//                         position: relative;
+//                     }
+//                 }
+//             }
 
             
 
 
+//         }
+//     }
+
+//     .accordionSpacing.panel-group .panel+.panel {
+//         margin-top: 25px;
+//         /* solution with margins */
+//     }
+
+
+//     .proj-accordion {
+//         margin: 2rem;
+
+//         .timeline {
+//             position: absolute;
+//             right: 8%;
+//         }
+
+//         .proj-desc {
+//             font-family: $fontFamily;
+//             letter-spacing: 0rem;
+//             line-height: 2rem;
+//         }
+
+
+
+//     }
+
+
+//     .accordion-button::after {
+//         background-image: initial;
+//     }
+
+//     .accordion-button:not(.collapsed)::after {
+//         background-image: initial;
+//     }
+// }
+
+// .project-accordion-heading {
+
+//     // color: $fontColor;
+//     // background-color: #343a40;
+//     &:hover {
+
+
+//         .expand-icon {
+//             //    color:red;
+//             transform: rotate(180deg);
+//             font-size: 1.2rem;
+//             transition: 1s all ease-in-out;
+
+
+//         }
+
+//     }
+// }
+
+// .btn-circle {
+//     border: 1px solid #bbb;
+
+//     .expand-icon {
+//         // color:$fontColor;    
+//         font-size: 1.1rem;
+//         // position: relative;
+//         // padding-left: 1rem;
+//         // left: 1rem;
+
+
+//     }
+// }
+// .roles {
+//     font-family: $fontFamily;
+//     margin-bottom: .5rem;
+// }
+// @media (max-width:699px) {
+//     .container {
+//         padding:0 !important;
+//         .proj-accordion {
+//             .project-accordion-header {
+//                 .project-accordion-heading {
+
+                
+//                 font-size:.7rem !important;
+                
+//                 .timeline {
+//                     display:flex;
+//                     // position:sticky;
+//                     position: fixed;
+//                     transition: none !important;
+//                     font-size:.7rem !important;
+//                     i {
+//                         display: none;
+//                     }
+//                 }
+//             }
+//             }
+//             .project-accordion-body {
+//                 ul {
+//                     font-size: .7rem !important;
+//                     .roles {
+//                         font-size: .7rem !important;
+//                     }
+                    
+//                 }
+//                 .skills {
+//                     display:inline-grid;
+//                     .skill-btn {
+//                         background-color:$fontColor  !important;
+//                         color:#fff;
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
+
+
+
+
+
+.experience {
+    padding:2rem;
+    .header-bar {
+           text-align: center;
+           font-size: 42px;
+           letter-spacing: .2rem;
+           text-transform: uppercase;
+           font-family: $fontFamily;
+           color: #fff;
+           cursor: pointer;
+           text-decoration: none;
+           background-image: linear-gradient(351deg, rgba(218, 218, 224, 1) 0%, rgba(249, 249, 255, 1) 35%, rgba(198, 204, 205, 1) 100%);
+           background-position: bottom;
+           background-repeat: no-repeat;
+           background-size: 5% 4px;
+           border-radius: 53px;
+           transition: background-size 1s ease-in-out;
+           padding-bottom: .7rem;
+   
+           &:hover {
+               background-size: 20% 4px;
+               transition: background-size 1s ease-in-out;
+       
+           }
+       }
+}
+
+
+
+.experience-item {
+  margin-bottom: 1.5rem;
+  cursor: pointer;
+
+
+.experience-header {
+  display: flex;
+  align-items: center;
+  background-color: #f8f9fa;
+  padding: 1rem;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  .logo {
+      
+    margin:1rem;
+    img {
+       max-width: 50px;
+       max-height: 50px;
+       border-radius: 53px;     
+    }
+    }
+
+    .details{
+        h2 {
+            margin: 0;
+            font-size: 1.25rem;
+        }    
+    .timeline {
+        display: block;
+        color: #6c757d;
+        font-size: 0.875rem;
+        }
+    }
+}
+
+
+
+.experience-content {
+    background-color: #e9ecef;
+    padding: 1rem;
+    border-radius: 8px;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
+    font-family: $fontFamily;
+
+
+    .git-btn {
+        border-radius: 53px;
+        color: $fontColor;
+        border: 1px solid $fontColor;
+        background:#fff;
+        margin: 1rem;
+        padding:1rem;  
+        text-decoration: none; 
+        &:hover,
+        &:active {
+            background-color: $fontColor;
+            color:#fff; 
+            transform: scale(1.1, 1.1);
+                transition: .7s all ease-in-out;
         }
     }
 
-    .accordionSpacing.panel-group .panel+.panel {
-        margin-top: 25px;
-        /* solution with margins */
-    }
 
 
-    .proj-accordion {
-        margin: 2rem;
-
-        .timeline {
-            position: absolute;
-            right: 8%;
-        }
-
-        .proj-desc {
-            font-family: $fontFamily;
-            letter-spacing: 0rem;
-            line-height: 2rem;
-        }
-
-
-        .skill-btn {
+    .skill-btn {
             border-radius: 53px;
             color: $fontColor;
             border: 1px solid $fontColor;
@@ -91,95 +279,24 @@ $fontFamily: 'Montserrat', sans-serif;
             }
         }
 
-    }
-
-
-    .accordion-button::after {
-        background-image: initial;
-    }
-
-    .accordion-button:not(.collapsed)::after {
-        background-image: initial;
-    }
-}
-
-.project-accordion-heading {
-
-    // color: $fontColor;
-    // background-color: #343a40;
-    &:hover {
-
-
-        .expand-icon {
-            //    color:red;
-            transform: rotate(180deg);
-            font-size: 1.2rem;
-            transition: 1s all ease-in-out;
-
-
+        .project {
+          margin-bottom: 1rem;
         }
-
-    }
-}
-
-.btn-circle {
-    border: 1px solid #bbb;
-
-    .expand-icon {
-        // color:$fontColor;    
-        font-size: 1.1rem;
-        // position: relative;
-        // padding-left: 1rem;
-        // left: 1rem;
-
-
-    }
-}
-.roles {
-    font-family: $fontFamily;
-    margin-bottom: .5rem;
-}
-@media (max-width:699px) {
-    .container {
-        padding:0 !important;
-        .proj-accordion {
-            .project-accordion-header {
-                .project-accordion-heading {
-
-                
-                font-size:.7rem !important;
-                
-                .timeline {
-                    display:flex;
-                    // position:sticky;
-                    position: fixed;
-                    transition: none !important;
-                    font-size:.7rem !important;
-                    i {
-                        display: none;
-                    }
-                }
-            }
-            }
-            .project-accordion-body {
-                ul {
-                    font-size: .7rem !important;
-                    .roles {
-                        font-size: .7rem !important;
-                    }
-                    
-                }
-                .skills {
-                    display:inline-grid;
-                    .skill-btn {
-                        background-color:$fontColor  !important;
-                        color:#fff;
-                    }
-                }
-            }
+        
+        .project h4 {
+          font-size: 1.125rem;
+          margin: 0.5rem 0;
         }
-    }
 }
-.gitlink {
-    word-wrap: break-word;
+
+}
+
+ @media (max-width:699px) {
+   .experience {
+
+       .header-bar{
+           font-size:34px;
+           line-height: 2.6rem;
+        }   
+    }
 }
