--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,11 +27,11 @@
           
         </article>
         <a 
-        href="../../assets/PARAS_RESUME.docx"
+        href="../../assets/Paras08UiDev.pdf"
         id="download" 
         download
         type="button" class="button">
-            <span class="fa fa-arrow-down">&nbsp;</span>Download CV
+            <span class="fa fa-arrow-down">&nbsp;</span>Download Resume
           </a>
     </div>
     <!-- <div class="col-md-1 col-sm-1"></div> -->
