--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -293,7 +293,8 @@
         </div>
 
         <div class="experience-content" *ngIf="proj.isActive">
-            <a [href]="proj.gitLink" 
+            <a 
+            [href]="proj.gitLink" 
             target="_blank" 
             class="git-btn"
             type="button"
